nested/coreinfrastructuredeploy.json
{
	"$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"location": {
			"type": "string",
			"metadata": {
				"description": "Datacenter Region Location"
			}
		},
		"apiVersionStorage": {
			"type": "string",
			"metadata": {
				"description": "Storage API version"
			}
		},
		"apiVersionNetwork": {
			"type": "string",
			"metadata": {
				"description": "Network API version"
			}
		},
		"apiVersionCompute": {
			"type": "string",
			"metadata": {
				"description": "Compute API version"
			}
		},
		"apiVersionLinkTemplate": {
			"type": "string",
			"metadata": {
				"description": "Link Template API version"
			}
		},
		"subnetCreateTemplateUrl": {
			"type": "string",
			"metadata": {
				"description": "Subnet Create Template URL"
			}
		},
		"coreInfraDiagStorageAccountArray": {
			"type": "array",
			"metadata": {
				"description": "Diagnostics storage account names"
			}
		},
		"newStorageAccountRegistry": {
			"type": "string",
			"metadata": {
				"description": "Storage account name for use by OpenShift registry"
			}
		},
		"openshiftClusterPrefix": {
			"type": "string",
			"metadata": {
				"description": "OpenShift cluster prefix"
			}
		},
		"simplifiedClusterPrefix": {
			"type": "string",
			"metadata": {
				"description": "Simplified cluster prefix with no hyphens and all lowercase"
			}
		},
		"openshiftBastionHostname": {
			"type": "string",
			"metadata": {
				"description": "Bastion hostname"
			}
		},
		"openshiftMasterHostname": {
			"type": "string",
			"metadata": {
				"description": "Master hostname"
			}
		},
		"openshiftInfraHostname": {
			"type": "string",
			"metadata": {
				"description": "Infra hostname"
			}
		},
		"openshiftCnsHostname": {
			"type": "string",
			"metadata": {
				"description": "CNS hostname"
			}
		},
		"masterFirstAddrOctet4": {
			"type": "int",
			"metadata": {
				"description": "First IP address for master nodes"
			}
		},
		"masterFirstAddrPrefix": {
			"type": "string",
			"metadata": {
				"description": "Master prefix for first IP address"
			}
		},
		"infraFirstAddrOctet4": {
			"type": "int",
			"metadata": {
				"description": "First IP address for infra nodes"
			}
		},
		"infraFirstAddrPrefix": {
			"type": "string",
			"metadata": {
				"description": "Infra prefix for first IP address"
			}
		},
		"cnsFirstAddrOctet4": {
			"type": "int",
			"metadata": {
				"description": "First IP address for cns nodes"
			}
		},
		"cnsFirstAddrPrefix": {
			"type": "string",
			"metadata": {
				"description": "CNS prefix for first IP address"
			}
		},
		"masterClusterType": {
			"type": "string",
			"metadata": {
				"description": "Master cluster type - private or public"
			}
		},
		"routerClusterType": {
			"type": "string",
			"metadata": {
				"description": "Routing cluster type - private or public"
			}
		},
		"masterLoadBalancerName": {
			"type": "string",
			"metadata": {
				"description": "Master load balancer name"
			}
		},
		"openshiftMasterPublicIpDnsLabel": {
			"type": "string",
			"metadata": {
				"description": "Master public IP DNS label"
			}
		},
		"masterFrontEndIpConfigurationProperties": {
			"type": "object",
			"metadata": {
				"description": "Master load balancer front end IP configuration properties"
			}
		},
		"masterLbFrontEndConfigId": {
			"type": "string",
			"metadata": {
				"description": "Master load balancer front end config ID"
			}
		},
		"masterLbBackendPoolId": {
			"type": "string",
			"metadata": {
				"description": "Master load balancer back end pool ID"
			}
		},
		"masterLbHttpsProbeId": {
			"type": "string",
			"metadata": {
				"description": "Master load balancer HTTPS probe ID"
			}
		},
		"infraLoadBalancerName": {
			"type": "string",
			"metadata": {
				"description": "Infra load balancer name"
			}
		},
		"infraLbPublicIpDnsLabel": {
			"type": "string",
			"metadata": {
				"description": "Infra public IP DNS label"
			}
		},
		"infraFrontEndIpConfigurationProperties": {
			"type": "object",
			"metadata": {
				"description": "Infra load balancer front end IP configuration properties"
			}
		},
		"infraLbFrontEndConfigId": {
			"type": "string",
			"metadata": {
				"description": "Infra load balancer front end config ID"
			}
		},
		"infraLbBackendPoolId": {
			"type": "string",
			"metadata": {
				"description": "Infra load balancer back end pool ID"
			}
		},
		"infraLbHttpProbeId": {
			"type": "string",
			"metadata": {
				"description": "Infra load balancer HTTP probe ID"
			}
		},
		"infraLbHttpsProbeId": {
			"type": "string",
			"metadata": {
				"description": "Infra load balancer HTTPS probe ID"
			}
		},
		"bastionIp": {
			"type": "string",
			"metadata": {
				"description": "Bastion private IP"
			}
		},
		"bastionPublicIp": {
			"type": "string",
			"metadata": {
				"description": "Bastion public IP"
			}
		},
		"bastionPublicIpDnsLabel": {
			"type": "string",
			"metadata": {
				"description": "Bastion public IP DNS label"
			}
		},
		"enableBastionAcceleratedNetworking": {
			"type": "string",
			"metadata": {
				"description": "Enable accelerated networking for bastion node"
			}
		},
		"enableMasterAcceleratedNetworking": {
			"type": "string",
			"metadata": {
				"description": "Enable accelerated networking for master nodes"
			}
		},
		"enableInfraAcceleratedNetworking": {
			"type": "string",
			"metadata": {
				"description": "Enable accelerated networking for infra nodes"
			}
		},
		"enableCnsAcceleratedNetworking": {
			"type": "string",
			"metadata": {
				"description": "Enable accelerated networking for cns nodes"
			}
		},
		"coreInfraVirtualNetworkResourceGroup": {
			"type": "string",
			"metadata": {
				"description": "Name of the core infrastructure vNet resource group"
			}
		},
		"coreInfraVirtualNetworkName": {
			"type": "string",
			"metadata": {
				"description": "Name of the core infrastructure vNet for Master, Infra, CNS, and Tools nodes"
			}
		},
		"masterSubnetName": {
			"type": "string",
			"metadata": {
				"description": "Name of the subnet for Master, Infra, CNS, and Tools nodes"
			}
		},
		"masterSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the master subnet"
			}
		},
		"infraSubnetName": {
			"type": "string",
			"metadata": {
				"description": "Name of the subnet for infra nodes"
			}
		},
		"infraSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the infra subnet"
			}
		},
		"cnsSubnetName": {
			"type": "string",
			"metadata": {
				"description": "Name of the subnet for cns nodes"
			}
		},
		"cnsSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the cns subnet"
			}
		},
		"toolsSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the tools subnet"
			}
		},
		"prodtestSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the prod / test subnet"
			}
		},
		"accdevSubnetPrefix": {
			"type": "string",
			"metadata": {
				"description": "CIDR used for the acc / dev subnet"
			}
		},
		"masterInstanceCount": {
			"type": "int",
			"metadata": {
				"description": "Master count"
			}
		},
		"infraInstanceCount": {
			"type": "int",
			"metadata": {
				"description": "Infra count"
			}
		},
		"cnsInstanceCount": {
			"type": "int",
			"metadata": {
				"description": "CNS count"
			}
		},
		"nameSuffix": {
			"type": "string",
			"metadata": {
				"description": "Suffix to append to resource names"
			}
		},
		"hostSuffix": {
			"type": "string",
			"metadata": {
				"description": "Suffix to append to host names"
			}
		},
		"customTags": {
			"type": "object",
			"metadata": {
				"description": "Custom Tags"
			}
		}
	},
	"variables": {
	},
	"resources": [
		{
			"type": "Microsoft.Storage/storageAccounts",
			"name": "[parameters('coreInfraDiagStorageAccountArray')[copyIndex()].name]",
			"location": "[parameters('location')]",
			"kind": "Storage",
			"apiVersion": "[parameters('apiVersionStorage')]",
			"tags": "[parameters('customTags')]",
			"sku": {
				"name": "Standard_LRS",
				"tier": "Standard"
			},
			"copy": {
				"name": "storageAccountLoop",
				"count": "[length(parameters('coreInfraDiagStorageAccountArray'))]"
			}
		}, {
			"type": "Microsoft.Storage/storageAccounts",
			"name": "[parameters('newStorageAccountRegistry')]",
			"location": "[parameters('location')]",
			"kind": "Storage",
			"apiVersion": "[parameters('apiVersionStorage')]",
			"tags": "[parameters('customTags')]",
			"sku": {
				"name": "Standard_LRS",
				"tier": "Standard"
			}
		}, {
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[concat(parameters('openshiftClusterPrefix'), '-Nsg-Oscm-', parameters('nameSuffix'))]",
			"location": "[parameters('location')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"securityRules": [
                    {
                        "name": "Allow-Step1-To-Oscm-TCP-22",
                        "properties": {
                            "description": "Allow SSH in from StepStoneSubnet1",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefixes":[
                                "10.232.0.32/27",
                                "10.236.0.32/27"
                            ], 
                            "destinationAddressPrefix": "[parameters('masterSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-Sbhs-To-Oscm-HTTPS-443",
                        "properties": {
                            "description": "Allow-SouthF5-To-OpenShiftMasterNodes-HTTPS-443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefixes": [
                                "10.232.124.176/28",
                                "10.236.124.176/28"
                            ],
                            "destinationAddressPrefix": "[parameters('masterSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-OpenShiftCoreNodes-To-OpenShiftMasterNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftCoreNodes-To-OpenShiftMasterNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('masterSubnetPrefix')]",
                                "[parameters('infraSubnetPrefix')]",
                                "[parameters('cnsSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('masterSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1002,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-OpenShiftAppNodes-To-OpenShiftMasterNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftAppNodes-To-OpenShiftMasterNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('toolsSubnetPrefix')]",
                                "[parameters('prodtestSubnetPrefix')]",
                                "[parameters('accdevSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('masterSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1003,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Deny-Any-To-Any",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound"
                        }
                    }
                ]
			}
		}, {
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[concat(parameters('openshiftClusterPrefix'), '-Nsg-Osci-', parameters('nameSuffix'))]",
			"location": "[parameters('location')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"securityRules": [
                    {
                        "name": "Allow-Sbhs-To-Osci-HTTPS-443",
                        "properties": {
                            "description": "Allow-SouthF5-To-OpenShiftInfraNodes-HTTPS-443",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefixes": [
                                "10.232.124.176/28",
                                "10.236.124.176/28"
                            ],
                            "destinationAddressPrefix": "[parameters('infraSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-Nbhs-To-Osci-HTTPS-443",
                        "properties": {
                            "description": "Allow-NorthF5-To-OpenShiftInfraNodes-HTTPS-443",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefixes": [
                                "10.232.123.64/28",
                                "10.236.123.64/28"
                            ],
                            "destinationAddressPrefix": "[parameters('infraSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-OpenShiftCoreNodes-To-OpenShiftInfraNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftCoreNodes-To-OpenShiftInfraNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('masterSubnetPrefix')]",
                                "[parameters('infraSubnetPrefix')]",
                                "[parameters('cnsSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('infraSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1002,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-OpenShiftApplicationNodes-To-OpenShiftInfraNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftApplicationNodes-To-OpenShiftInfraNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('toolsSubnetPrefix')]",
                                "[parameters('prodtestSubnetPrefix')]",
                                "[parameters('accdevSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('infraSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1003,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Deny-Any-To-Any",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound"
                        }
                    }
                ]
			}
		}, {
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[concat(parameters('openshiftClusterPrefix'), '-Nsg-Oscc-', parameters('nameSuffix'))]",
			"location": "[parameters('location')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"securityRules": [
                    {
                        "name": "Allow-OpenShiftCoreNodes-To-OpenShiftCNSNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftCoreNodes-To-OpenShiftCNSNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('masterSubnetPrefix')]",
                                "[parameters('infraSubnetPrefix')]",
                                "[parameters('cnsSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('cnsSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-OpenShiftApplicationNodes-To-OpenShiftCNSNodes-All-All",
                        "properties": {
                            "description": "Allow-OpenShiftApplicationNodes-To-OpenShiftCNSNodes-All-All",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefixes": [
                                "[parameters('toolsSubnetPrefix')]",
                                "[parameters('prodtestSubnetPrefix')]",
                                "[parameters('accdevSubnetPrefix')]"
                            ],
                            "destinationAddressPrefix": "[parameters('cnsSubnetPrefix')]",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Deny-Any-To-Any",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound"
                        }
                    }
                ]
			}
		}, {
			"name": "CreateMasterSubnet",
			"type": "Microsoft.Resources/deployments",
			"resourceGroup": "[parameters('coreInfraVirtualNetworkResourceGroup')]",
			"apiVersion": "[parameters('apiVersionLinkTemplate')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Oscm-', parameters('nameSuffix'))]"
			],
			"properties": {
				"mode": "Incremental",
				"templateLink": {
					"uri": "[parameters('subnetCreateTemplateUrl')]",
					"contentVersion": "1.0.0.0"
				},
				"parameters": {
					"location": {
						"value": "[parameters('location')]"
					},
					"apiVersionNetwork": {
						"value": "[parameters('apiVersionNetwork')]"
					},
					"existingVnetName": {
						"value": "[parameters('coreInfraVirtualNetworkName')]"
					},
					"subnetName": {
						"value": "[parameters('masterSubnetName')]"
					},
					"subnetPrefix": {
						"value": "[parameters('masterSubnetPrefix')]"
					},
					"networkSecurityGroup": {
						"value": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups/', concat(parameters('openshiftClusterPrefix'), '-Nsg-Oscm-', parameters('nameSuffix')))]"
					}
				}
			}
		}, {
			"name": "CreateInfraSubnet",
			"type": "Microsoft.Resources/deployments",
			"resourceGroup": "[parameters('coreInfraVirtualNetworkResourceGroup')]",
			"apiVersion": "[parameters('apiVersionLinkTemplate')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Osci-', parameters('nameSuffix'))]",
				"CreateMasterSubnet"
			],
			"properties": {
				"mode": "Incremental",
				"templateLink": {
					"uri": "[parameters('subnetCreateTemplateUrl')]",
					"contentVersion": "1.0.0.0"
				},
				"parameters": {
					"location": {
						"value": "[parameters('location')]"
					},
					"apiVersionNetwork": {
						"value": "[parameters('apiVersionNetwork')]"
					},
					"existingVnetName": {
						"value": "[parameters('coreInfraVirtualNetworkName')]"
					},
					"subnetName": {
						"value": "[parameters('infraSubnetName')]"
					},
					"subnetPrefix": {
						"value": "[parameters('infraSubnetPrefix')]"
					},
					"networkSecurityGroup": {
						"value": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups/', concat(parameters('openshiftClusterPrefix'), '-Nsg-Osci-', parameters('nameSuffix')))]"
					}
				}
			}
		}, {
			"name": "CreateCnsSubnet",
			"type": "Microsoft.Resources/deployments",
			"resourceGroup": "[parameters('coreInfraVirtualNetworkResourceGroup')]",
			"apiVersion": "[parameters('apiVersionLinkTemplate')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Oscc-', parameters('nameSuffix'))]",
				"CreateInfraSubnet"
			],
			"properties": {
				"mode": "Incremental",
				"templateLink": {
					"uri": "[parameters('subnetCreateTemplateUrl')]",
					"contentVersion": "1.0.0.0"
				},
				"parameters": {
					"location": {
						"value": "[parameters('location')]"
					},
					"apiVersionNetwork": {
						"value": "[parameters('apiVersionNetwork')]"
					},
					"existingVnetName": {
						"value": "[parameters('coreInfraVirtualNetworkName')]"
					},
					"subnetName": {
						"value": "[parameters('cnsSubnetName')]"
					},
					"subnetPrefix": {
						"value": "[parameters('cnsSubnetPrefix')]"
					},
					"networkSecurityGroup": {
						"value": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups/', concat(parameters('openshiftClusterPrefix'), '-Nsg-Oscc-', parameters('nameSuffix')))]"
					}
				}
			}
		}, {
			"condition": "[equals(parameters('routerClusterType'), 'public')]",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[parameters('bastionPublicIp')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"publicIPAllocationMethod": "Dynamic",
				"dnsSettings": {
					"domainNameLabel": "[parameters('bastionPublicIpDnsLabel')]"
				}
			}
		}, {
			"condition": "[equals(parameters('routerClusterType'), 'public')]",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[parameters('infraLbPublicIpDnsLabel')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"publicIPAllocationMethod": "Static",
				"dnsSettings": {
					"domainNameLabel": "[parameters('infraLbPublicIpDnsLabel')]"
				}
			}
		}, {
			"condition": "[equals(parameters('masterClusterType'), 'public')]",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[parameters('openshiftMasterPublicIpDnsLabel')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"properties": {
				"publicIPAllocationMethod": "Static",
				"dnsSettings": {
					"domainNameLabel": "[parameters('openshiftMasterPublicIpDnsLabel')]"
				}
			}
		}, {
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[concat(parameters('openshiftBastionHostname'), '-nic-01')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Oscm-', parameters('nameSuffix'))]",
				"CreateMasterSubnet"
			],
			"properties": {
				"ipConfigurations": [{
					"name": "[concat(parameters('openshiftBastionHostname'), 'ipconfig')]",
					"properties": {
						"privateIPAllocationMethod": "Static",
						"privateIPAddress": "[parameters('bastionIp')]",
						"subnet": {
							"id": "[resourceId(parameters('coreInfraVirtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('coreInfraVirtualNetworkName'), parameters('masterSubnetName'))]"
						}
					}
				}],
				"enableAcceleratedNetworking": "[parameters('enableBastionAcceleratedNetworking')]"
			}
		}, {
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[concat(parameters('openshiftMasterHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), '-nic-01')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Oscm-', parameters('nameSuffix'))]",
				"CreateMasterSubnet"
			],
			"copy": {
				"name": "masterNicLoop",
				"count": "[parameters('masterInstanceCount')]"
			},
			"properties": {
				"ipConfigurations": [{
					"name": "[concat(parameters('openshiftMasterHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), 'ipconfig')]",
					"properties": {
						"privateIPAllocationMethod": "Static",
						"privateIPAddress": "[concat(parameters('masterFirstAddrPrefix'), copyindex(parameters('masterFirstAddrOctet4')))]",
						"subnet": {
							"id": "[resourceId(parameters('coreInfraVirtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('coreInfraVirtualNetworkName'), parameters('masterSubnetName'))]"
						}
					}
				}],
				"enableAcceleratedNetworking": "[parameters('enableMasterAcceleratedNetworking')]"
			}
		}, {
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[concat(parameters('openshiftInfraHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), '-nic-01')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Osci-', parameters('nameSuffix'))]",
				"CreateInfraSubnet"
			],
			"copy": {
				"name": "infraNicLoop",
				"count": "[parameters('infraInstanceCount')]"
			},
			"properties": {
				"ipConfigurations": [{
					"name": "[concat(parameters('openshiftInfraHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), 'ipconfig')]",
					"properties": {
						"privateIPAllocationMethod": "Static",
						"privateIPAddress": "[concat(parameters('infraFirstAddrPrefix'), copyindex(parameters('infraFirstAddrOctet4')))]",
						"subnet": {
							"id": "[resourceId(parameters('coreInfraVirtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('coreInfraVirtualNetworkName'), parameters('infraSubnetName'))]"
						}
					}
				}],
				"enableAcceleratedNetworking": "[parameters('enableInfraAcceleratedNetworking')]"
			}
		}, {
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[concat(parameters('openshiftCnsHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), '-nic-01')]",
			"location": "[parameters('location')]",
			"apiVersion": "[parameters('apiVersionNetwork')]",
			"tags": "[parameters('customTags')]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', parameters('openshiftClusterPrefix'), '-Nsg-Oscc-', parameters('nameSuffix'))]",
				"CreateCnsSubnet"
			],
			"copy": {
				"name": "cnsNicLoop",
				"count": "[parameters('cnsInstanceCount')]"
			},
			"properties": {
				"ipConfigurations": [{
					"name": "[concat(parameters('openshiftCnsHostname'), padLeft(add(copyindex(), 1), 2, parameters('hostSuffix')), 'ipconfig')]",
					"properties": {
						"privateIPAllocationMethod": "Static",
						"privateIPAddress": "[concat(parameters('cnsFirstAddrPrefix'), copyindex(parameters('cnsFirstAddrOctet4')))]",
						"subnet": {
							"id": "[resourceId(parameters('coreInfraVirtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('coreInfraVirtualNetworkName'), parameters('cnsSubnetName'))]"
						}
					}
				}],
				"enableAcceleratedNetworking": "[parameters('enableCnsAcceleratedNetworking')]"
			}
		}
	],
	"outputs": {
		"storageUriMaster": {
			"type": "string",
			"value": "[concat(concat(reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', parameters('coreInfraDiagStorageAccountArray')[0].name), parameters('apiVersionStorage')).primaryEndpoints['blob']))]"
		},"storageUriInfra": {
			"type": "string",
			"value": "[concat(concat(reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', parameters('coreInfraDiagStorageAccountArray')[1].name), parameters('apiVersionStorage')).primaryEndpoints['blob']))]"
		},"storageUriCns": {
			"type": "string",
			"value": "[concat(concat(reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', parameters('coreInfraDiagStorageAccountArray')[2].name), parameters('apiVersionStorage')).primaryEndpoints['blob']))]"
		},
		"registryKey": {
			"type": "string",
			"value": "[listKeys(parameters('newStorageAccountRegistry'), parameters('apiVersionStorage')).keys[0].value]"
		},
		"masterPublicIp": {
			"type": "string",
			"value": "[if(equals(parameters('masterClusterType'), 'public'), reference(parameters('openshiftMasterPublicIpDnsLabel')).ipAddress, 'private')]"
		},
		"masterPublicIpFqdn": {
			"type": "string",
			"value": "[if(equals(parameters('masterClusterType'), 'public'), reference(parameters('openshiftMasterPublicIpDnsLabel')).dnsSettings.fqdn, 'private')]"
		},
		"infraPublicIp": {
			"type": "string",
			"value": "[if(equals(parameters('routerClusterType'), 'public'), reference(parameters('infraLbPublicIpDnsLabel')).ipAddress, 'private')]"
		}
	}
}
